2003-01-24  Carlos Perelló Marín <carlos@gnome-db.org>

	* translation-status.xml: Renamed xpdf to gpdf.

2003-01-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Seahorse has been branched. Reflect this.

2003-01-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched. Reflect
	this.

2003-01-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added camorama to 2.1-fifth-toe.

2003-01-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: glib and gnome-games have
	(silently) been branched. Reflect this.

2003-01-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk has been branched. Reflect this.

2003-01-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for
	gnome-desktop-themes in 2.1-fifth-toe.

2003-01-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf has been branched. Reflect this.

2003-01-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch info for balsa
	in 1.4-fifth-toe.

2003-01-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved sodipodi to 2.1-extras.

2003-01-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: balsa has been branched. Reflect this.

2003-01-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-utils has been branched for
	GNOME 2.2. Reflect this.

2003-01-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnomeprint, libgnomeprintui have
	(silently) been branched for GNOME 2.2. Reflect this.

2003-01-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added zenity to 2.1-extras.

2003-01-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: metacity, gnome-terminal, libwnck have
	been branched for GNOME 2.2. Reflect this.

2003-01-19  Christian Rose  <menthos@menthos.com>
