@@ -1392,17 +1392,6 @@
       </component>
     </version>
   </module>
-  <module name="gnome-desktop-themes">
-    <version release="gnome-2.1-fifth-toe">
-      <component name="gnome-desktop-themes" dir="gnome-desktop-themes">
-	<podir dir="po"/>
-	<potname name="gnome-desktop-themes.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
   <module name="gnome-doorman">
     <version release="gnome-1.4-extras">
       <component name="gnome-doorman" dir="gnome-doorman">
