@@ -1,8 +1,13 @@
+2003-01-24  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: gnome-desktop-themes has been merged
+	into gnome-themes. Remove gnome-desktop-themes.
+
 2003-01-24  Carlos Perelló Marín <carlos@gnome-db.org>
 
 	* translation-status.xml: Renamed xpdf to gpdf.
 
-2003-01-23  Christian Rose  <menthos@menthos.com>
+2003-01-24  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Seahorse has been branched. Reflect this.
 
